--- a/style.css
+++ b/style.css
@@ -12,3 +12,19 @@ body {
     margin-right: auto;
     width: 512px;
 }
+
+#white {
+    fill: rgb(255, 255, 255);
+}
+
+#white:hover {
+    fill: rgb(218, 221, 48);
+}
+
+#black {
+    fill: rgb(0, 0, 0);
+}
+
+#black:hover {
+    fill: rgb(255, 255, 255);
+}
